==> leminhduy00/shadow-run-game/application/sources/platform/stm32h/sys_cfg.c <==
#include <stdint.h>
#include <stdbool.h>
#include <stdarg.h>
#include "sys_cfg.h"
#include "system.h"
#include "xprintf.h"
#include "ring_buffer.h"
#include "sys_dbg.h"
#include "sys_ctrl.h"
#include "sys_io.h"
#include "sys_dbg.h"
#include "ak.h"
#include "tim.h"
#include "iwdg.h"
#include "usart.h"
#include "stm32h7xx_ll_system.h"
#include "stm32h7xx_ll_pwr.h"
#include "stm32h7xx_ll_cortex.h"
#include "stm32h7xx_ll_utils.h"
#include "stm32h7xx_ll_rcc.h"
#define RING_BUFFER_CHAR_SHELL_SEND_BUFFER_SIZE 512

void sys_cfg_clock()
{
    LL_FLASH_SetLatency(LL_FLASH_LATENCY_4);
    while (LL_FLASH_GetLatency() != LL_FLASH_LATENCY_4)
    {
    }
    LL_PWR_ConfigSupply(LL_PWR_LDO_SUPPLY);
    LL_PWR_SetRegulVoltageScaling(LL_PWR_REGU_VOLTAGE_SCALE3);
    while (LL_PWR_IsActiveFlag_VOS() == 0)
    {
    }
    LL_RCC_HSE_Enable();

    /* Wait till HSE is ready */
    while (LL_RCC_HSE_IsReady() != 1)
    {
    }
    LL_RCC_LSI_Enable();

    /* Wait till LSI is ready */
    while (LL_RCC_LSI_IsReady() != 1)
    {
    }
    LL_RCC_PLL_SetSource(LL_RCC_PLLSOURCE_HSE);
    LL_RCC_PLL1P_Enable();
    LL_RCC_PLL1Q_Enable();
    LL_RCC_PLL1R_Enable();
    LL_RCC_PLL1_SetVCOInputRange(LL_RCC_PLLINPUTRANGE_8_16);
    LL_RCC_PLL1_SetVCOOutputRange(LL_RCC_PLLVCORANGE_WIDE);
    LL_RCC_PLL1_SetM(2);
    LL_RCC_PLL1_SetN(32);
    LL_RCC_PLL1_SetP(2);
    LL_RCC_PLL1_SetQ(4);
    LL_RCC_PLL1_SetR(2);
    LL_RCC_PLL1_Enable();

    /* Wait till PLL is ready */
    while (LL_RCC_PLL1_IsReady() != 1)
    {
    }

    /* Intermediate AHB prescaler 2 when target frequency clock is higher than 80 MHz */
    LL_RCC_SetAHBPrescaler(LL_RCC_AHB_DIV_2);

    LL_RCC_SetSysClkSource(LL_RCC_SYS_CLKSOURCE_PLL1);

    /* Wait till System clock is ready */
    while (LL_RCC_GetSysClkSource() != LL_RCC_SYS_CLKSOURCE_STATUS_PLL1)
    {
    }
    LL_RCC_SetSysPrescaler(LL_RCC_SYSCLK_DIV_1);
    LL_RCC_SetAHBPrescaler(LL_RCC_AHB_DIV_1);
    LL_RCC_SetAPB1Prescaler(LL_RCC_APB1_DIV_2);
    LL_RCC_SetAPB2Prescaler(LL_RCC_APB2_DIV_4);
    LL_RCC_SetAPB3Prescaler(LL_RCC_APB3_DIV_2);
    LL_RCC_SetAPB4Prescaler(LL_RCC_APB4_DIV_2);
    LL_SetSystemCoreClock(200000000);

    /* Update the time base */
    if (HAL_InitTick(IRQ_PRIO_TIMER7_SOFT_WATCHDOG) != HAL_OK)
    {
        FATAL("CLK", 0x01);
    }
}

void sys_cfg_svc()
{
    NVIC_SetPriority(SVCall_IRQn, IRQ_PRIO_SYS_SVC);
    NVIC_EnableIRQ(SVCall_IRQn);
}

void sys_cfg_update_info()
{
    extern uint32_t _start_flash;
    extern uint32_t _end_flash;
    extern uint32_t _start_ram;
    extern uint32_t _end_ram;
    extern uint32_t _data;
    extern uint32_t _edata;
    extern uint32_t _bss;
    extern uint32_t _ebss;
    extern uint32_t __heap_start__;
    extern uint32_t __heap_end__;
    extern uint32_t _estack;

    LL_RCC_ClocksTypeDef RCC_Clocks;

    LL_RCC_GetSystemClocksFreq(&RCC_Clocks);

    system_info.cpu_clock = RCC_Clocks.HCLK_Frequency;
    system_info.tick = 1;
    system_info.console_baudrate = SYS_CONSOLE_BAUDRATE;
    system_info.flash_used = ((uint32_t)&_end_flash - (uint32_t)&_start_flash) + ((uint32_t)&_edata - (uint32_t)&_data);
    system_info.ram_used = (uint32_t)&_estack - (uint32_t)&_start_ram;
    system_info.data_init_size = (uint32_t)&_edata - (uint32_t)&_data;
    system_info.data_non_init_size = (uint32_t)&_ebss - (uint32_t)&_bss;
    system_info.stack_avail = (uint32_t)&_estack - (uint32_t)&_end_ram;
    system_info.heap_avail = (uint32_t)&__heap_end__ - (uint32_t)&__heap_start__;
    system_info.ram_other = system_info.ram_used - (system_info.heap_avail + system_info.stack_avail + system_info.data_non_init_size + system_info.data_init_size);

    delay_coeficient = system_info.cpu_clock / 1000000;

    /* kernel banner */
    SYS_PRINT("\n");
    SYS_PRINT("   __    _  _ \n");
    SYS_PRINT("  /__\\  ( )/ )\n");
    SYS_PRINT(" /(__)\\ (   ( \n");
    SYS_PRINT("(__)(__)(_)\\_)\n");
    SYS_PRINT("Wellcome to Active Kernel %s\n", AK_VERSION);
    SYS_PRINT("\n");

#if 0
	/* system banner */
	SYS_PRINT("system information:\n");
	SYS_PRINT("\tFLASH used:\t%d bytes\n", system_info.flash_used);
	SYS_PRINT("\tSRAM used:\t%d bytes\n", system_info.ram_used);
	SYS_PRINT("\t\tdata init size:\t\t%d bytes\n", system_info.data_init_size);
	SYS_PRINT("\t\tdata non_init size:\t%d bytes\n", system_info.data_non_init_size);
	SYS_PRINT("\t\tstack avail:\t\t%d bytes\n", system_info.stack_avail);
	SYS_PRINT("\t\theap avail:\t\t%d bytes\n", system_info.heap_avail);
	SYS_PRINT("\t\tother:\t\t\t%d bytes\n", system_info.ram_other);
	SYS_PRINT("\n");
	SYS_PRINT("\tcpu clock:\t%d Hz\n", system_info.cpu_clock);
	SYS_PRINT("\ttime tick:\t%d ms\n", system_info.tick);
	SYS_PRINT("\tconsole:\t%d bps\n", system_info.console_baudrate);
	SYS_PRINT("\n\n");
#endif
}

void sys_ctrl_shell_put_char(uint8_t c)
{
    bool _flag_trigger = false;

    ENTRY_CRITICAL();

    if (ring_buffer_char_is_empty(&ring_buffer_char_shell_send))
    {
        _flag_trigger = true;
    }

    ring_buffer_char_put(&ring_buffer_char_shell_send, c);

    EXIT_CRITICAL();

    if (_flag_trigger)
    {
        LL_USART_EnableIT_TXE_TXFNF(USART_CONSOLE);
    }
}

void sys_ctrl_shell_put_char_block(uint8_t c)
{
	while (LL_USART_IsActiveFlag_TXE(USART_CONSOLE) == RESET);

	/* put transnission data */
	LL_USART_TransmitData8(USART_CONSOLE, (uint8_t)c);

    /* wait transmission completed */
	while (LL_USART_IsActiveFlag_TC(USART_CONSOLE) == RESET);
}

void sys_ctrl_shell_sw_to_block()
{
    ENTRY_CRITICAL();

    xfunc_output = (void (*)(int))sys_ctrl_shell_put_char_block;

    LL_USART_DisableIT_TXE_TXFNF(USART_CONSOLE);

    EXIT_CRITICAL();
}

void sys_ctrl_shell_sw_to_nonblock()
{
    ENTRY_CRITICAL();

    xfunc_output = (void (*)(int))sys_ctrl_shell_put_char;

    LL_USART_EnableIT_TXE_TXFNF(USART_CONSOLE);

    EXIT_CRITICAL();
}

uint8_t sys_ctrl_shell_get_char()
{
    volatile uint8_t c;

    if (LL_USART_IsActiveFlag_ORE(USART_CONSOLE) == SET)
    {
        LL_USART_ClearFlag_ORE(USART_CONSOLE);
    }
    
    if (LL_USART_IsActiveFlag_RXNE_RXFNE(USART_CONSOLE) == SET)
    {
        c = (uint8_t)LL_USART_ReceiveData8(USART_CONSOLE);
    }
    
    return c;
}

void sys_ctr_sleep_wait_for_irq()
{
    LL_LPM_EnableSleep();
    __WFI();
}

void sys_ctr_stop_mcu()
{
    LL_APB4_GRP1_EnableClock(LL_APB4_GRP1_PERIPH_SYSCFG);

	/* Configure all GPIO as analog to reduce current consumption on non used IOs */
	/* Enable GPIOs clock */
    LL_AHB4_GRP1_EnableClock(LL_AHB4_GRP1_PERIPH_GPIOA | LL_AHB4_GRP1_PERIPH_GPIOB | LL_AHB4_GRP1_PERIPH_GPIOC |
                             LL_AHB4_GRP1_PERIPH_GPIOD | LL_AHB4_GRP1_PERIPH_GPIOE);

    LL_GPIO_SetPinMode(GPIOA, LL_GPIO_PIN_ALL, LL_GPIO_MODE_ANALOG);
    LL_GPIO_SetPinMode(GPIOB, LL_GPIO_PIN_ALL, LL_GPIO_MODE_ANALOG);
    LL_GPIO_SetPinMode(GPIOC, LL_GPIO_PIN_ALL, LL_GPIO_MODE_ANALOG);
    LL_GPIO_SetPinMode(GPIOD, LL_GPIO_PIN_ALL, LL_GPIO_MODE_ANALOG);
    LL_GPIO_SetPinMode(GPIOE, LL_GPIO_PIN_ALL, LL_GPIO_MODE_ANALOG);

    /* Disable GPIOs clock */
    LL_AHB4_GRP1_DisableClock(LL_AHB4_GRP1_PERIPH_GPIOA | LL_AHB4_GRP1_PERIPH_GPIOB | LL_AHB4_GRP1_PERIPH_GPIOC |
                              LL_AHB4_GRP1_PERIPH_GPIOD | LL_AHB4_GRP1_PERIPH_GPIOE);

    /* Enter Stop Mode */
    LL_LPM_EnableDeepSleep();
    __WFI();

    while (1)
    {
    }
}

void sys_ctrl_soft_watchdog_increase_counter()
{
    sys_ctrl_soft_counter++;
    if (sys_ctrl_soft_counter >= sys_ctrl_soft_time_out)
{
        LL_TIM_DisableIT_UPDATE(TIM7);
        FATAL("SWDG", 0x01);
    }
}
