==> phamtung93/TestOPMS_v1.0/application/sources/platform/stm32l/sys_cfg.c <==
#include <stdint.h>
#include <stdbool.h>
#include <stdarg.h>
#include "sys_cfg.h"
#include "system.h"
#include "stm32l1xx.h"
#include "stm32l1xx_conf.h"
#include "system_stm32l1xx.h"
#include "core_cm3.h"
#include "core_cmFunc.h"
#include "xprintf.h"
#include "ring_buffer.h"
#include "sys_dbg.h"
#include "sys_def.h"
#include "sys_ctrl.h"
#include "sys_io.h"
#include "sys_dbg.h"
#include "ak.h"
#define RING_BUFFER_CHAR_SHELL_SEND_BUFFER_SIZE		512

void sys_cfg_clock() {
	/* Enable the HSI oscillator */
	RCC_HSICmd(ENABLE);
	while(RCC_GetFlagStatus(RCC_FLAG_HSIRDY) == RESET);

	SystemCoreClockUpdate();

	/* NVIC configuration */
	NVIC_PriorityGroupConfig(NVIC_PriorityGroup_4);
}

void sys_cfg_svc() {
	NVIC_InitTypeDef NVIC_InitStructure;
	NVIC_InitStructure.NVIC_IRQChannel = SVC_IRQn;
	NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority = IRQ_PRIO_SYS_SVC;
	NVIC_InitStructure.NVIC_IRQChannelSubPriority = 0;
	NVIC_InitStructure.NVIC_IRQChannelCmd = ENABLE;
	NVIC_Init(&NVIC_InitStructure);

	NVIC_SetPriority(SVC_IRQn, IRQ_PRIO_SYS_SVC);
}

void sys_cfg_update_info() {
	extern uint32_t _start_flash;
	extern uint32_t _end_flash;
	extern uint32_t _start_ram;
	extern uint32_t _end_ram;
	extern uint32_t _data;
	extern uint32_t _edata;
	extern uint32_t _bss;
	extern uint32_t _ebss;
	extern uint32_t __heap_start__;
	extern uint32_t __heap_end__;
	extern uint32_t _estack;

	RCC_ClocksTypeDef RCC_Clocks;

	RCC_GetClocksFreq(&RCC_Clocks);

	system_info.cpu_clock = RCC_Clocks.HCLK_Frequency;
	system_info.tick      = 1;
	system_info.console_baudrate = SYS_CONSOLE_BAUDRATE;
	system_info.flash_used = ((uint32_t)&_end_flash - (uint32_t)&_start_flash) + ((uint32_t)&_edata - (uint32_t)&_data);
	system_info.ram_used = (uint32_t)&_estack - (uint32_t)&_start_ram;
	system_info.data_init_size = (uint32_t)&_edata - (uint32_t)&_data;
	system_info.data_non_init_size = (uint32_t)&_ebss - (uint32_t)&_bss;
	system_info.stack_avail = (uint32_t)&_estack - (uint32_t)&_end_ram;
	system_info.heap_avail = (uint32_t)&__heap_end__ - (uint32_t)&__heap_start__;
	system_info.ram_other = system_info.ram_used - (system_info.heap_avail + system_info.stack_avail + system_info.data_non_init_size + system_info.data_init_size);

	delay_coeficient = system_info.cpu_clock /1000000;

	/* kernel banner */
	SYS_PRINT("\n");
	SYS_PRINT("   __    _  _ \n");
	SYS_PRINT("  /__\\  ( )/ )\n");
	SYS_PRINT(" /(__)\\ (   ( \n");
	SYS_PRINT("(__)(__)(_)\\_)\n");
	SYS_PRINT("Wellcome to Active Kernel %s\n", AK_VERSION);
	SYS_PRINT("\n");

#if 0
	/* system banner */
	SYS_PRINT("system information:\n");
	SYS_PRINT("\tFLASH used:\t%d bytes\n", system_info.flash_used);
	SYS_PRINT("\tSRAM used:\t%d bytes\n", system_info.ram_used);
	SYS_PRINT("\t\tdata init size:\t\t%d bytes\n", system_info.data_init_size);
	SYS_PRINT("\t\tdata non_init size:\t%d bytes\n", system_info.data_non_init_size);
	SYS_PRINT("\t\tstack avail:\t\t%d bytes\n", system_info.stack_avail);
	SYS_PRINT("\t\theap avail:\t\t%d bytes\n", system_info.heap_avail);
	SYS_PRINT("\t\tother:\t\t\t%d bytes\n", system_info.ram_other);
	SYS_PRINT("\n");
	SYS_PRINT("\tcpu clock:\t%d Hz\n", system_info.cpu_clock);
	SYS_PRINT("\ttime tick:\t%d ms\n", system_info.tick);
	SYS_PRINT("\tconsole:\t%d bps\n", system_info.console_baudrate);
	SYS_PRINT("\n\n");
#endif
}

void sys_ctrl_shell_put_char(uint8_t c) {
	ENTRY_CRITICAL();
	ring_buffer_char_put(&ring_buffer_char_shell_send, c);
	EXIT_CRITICAL();

	if (ring_buffer_char_shell_sending_flag == 0) {
		USART_ITConfig(USARTx, USART_IT_TXE, ENABLE);
	}
}

void sys_ctrl_shell_put_char_block(uint8_t c) {
	/* wait last transmission completed */
	while (USART_GetFlagStatus(USARTx, USART_FLAG_TXE) == RESET);

	/* put transnission data */
	USART_SendData(USARTx, (uint8_t)c);

	/* wait transmission completed */
	while (USART_GetFlagStatus(USARTx, USART_FLAG_TC) == RESET);
}

void sys_ctrl_shell_sw_to_block() {
	while (ring_buffer_char_shell_sending_flag == 1 \
		   && (! ring_buffer_char_is_empty(&ring_buffer_char_shell_send)));

	ENTRY_CRITICAL();

	xprintf_stream_io_out = sys_ctrl_shell_put_char_block;

	USART_ClearITPendingBit(USARTx, USART_IT_TXE);
	USART_ITConfig(USARTx, USART_IT_TXE, DISABLE);

	EXIT_CRITICAL();
}

void sys_ctrl_shell_sw_to_nonblock() {
	ENTRY_CRITICAL();
	xprintf_stream_io_out = sys_ctrl_shell_put_char;
	USART_ITConfig(USARTx, USART_IT_TXE, ENABLE);
	EXIT_CRITICAL();
}

uint8_t sys_ctrl_shell_get_char() {
	volatile uint8_t c;

	if (USART_GetITStatus(USARTx, USART_IT_RXNE) == SET) {
		c = (uint8_t)USART_ReceiveData(USARTx);
		USART_ClearITPendingBit(USARTx, USART_IT_RXNE);
	}

	return c;
}

void sys_ctr_sleep_wait_for_irq() {
	PWR_EnterSleepMode(PWR_Regulator_ON, PWR_SLEEPEntry_WFI);
}

void sys_ctr_stop_mcu() {
	uint32_t BOROptionBytes = 0;
	RCC_APB1PeriphClockCmd(RCC_APB1Periph_PWR, ENABLE);

	BOROptionBytes = FLASH_OB_GetBOR();

	if((BOROptionBytes & 0x0F) != OB_BOR_OFF)
	{
		/* Unlocks the option bytes block access */
		FLASH_OB_Unlock();

		/* Clears the FLASH pending flags */
		FLASH_ClearFlag(FLASH_FLAG_EOP|FLASH_FLAG_WRPERR | FLASH_FLAG_PGAERR
						| FLASH_FLAG_SIZERR | FLASH_FLAG_OPTVERR);

		/* Select the desired V(BOR) Level ---------------------------------------*/
		FLASH_OB_BORConfig(OB_BOR_OFF);

		/* Launch the option byte loading */
		FLASH_OB_Launch();
	}

	/* Configure all GPIO as analog to reduce current consumption on non used IOs */
	/* Enable GPIOs clock */
	RCC_AHBPeriphClockCmd(RCC_AHBPeriph_GPIOA | RCC_AHBPeriph_GPIOB | RCC_AHBPeriph_GPIOC |
						  RCC_AHBPeriph_GPIOD | RCC_AHBPeriph_GPIOE | RCC_AHBPeriph_GPIOH
						  , ENABLE);

	GPIO_InitTypeDef GPIO_InitStructure;
	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AN;
	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_40MHz;
	GPIO_InitStructure.GPIO_PuPd = GPIO_PuPd_NOPULL;
	GPIO_InitStructure.GPIO_Pin = GPIO_Pin_All;
	GPIO_Init(GPIOC, &GPIO_InitStructure);
	GPIO_Init(GPIOD, &GPIO_InitStructure);
	GPIO_Init(GPIOE, &GPIO_InitStructure);
	GPIO_Init(GPIOH, &GPIO_InitStructure);
	GPIO_Init(GPIOA, &GPIO_InitStructure);
	GPIO_Init(GPIOB, &GPIO_InitStructure);

	/* Disable GPIOs clock */
	RCC_AHBPeriphClockCmd(RCC_AHBPeriph_GPIOA | RCC_AHBPeriph_GPIOB | RCC_AHBPeriph_GPIOC |
						  RCC_AHBPeriph_GPIOD | RCC_AHBPeriph_GPIOE | RCC_AHBPeriph_GPIOH
						  , DISABLE);

	/* Enable Ultra low power mode */
	PWR_UltraLowPowerCmd(ENABLE);

	/* Enter Stop Mode */
	PWR_EnterSTOPMode(PWR_Regulator_LowPower, PWR_STOPEntry_WFI);

	while(1){}
}

void sys_ctrl_soft_watchdog_increase_counter() {
	sys_ctrl_soft_counter++;
	if (sys_ctrl_soft_counter >= sys_ctrl_soft_time_out) {
		TIM_Cmd(TIM7, DISABLE);
		FATAL("SWDG", 0x01);
	}
}
